# claw-hermes

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
claw_hermes/: __init__.py  __main__.py  bus.py  cli.py  config.py  event.py  github.py  hermes.py  manifest.py  memory.py  openclaw.py  router.py  signatures.py  skill_cli.py  slop.py
docs/: manifest.md
examples/: routing.example.yaml
examples/skills/hello-world/: SKILL.md
skill/: SKILL.md
tests/: test_bus.py  test_config.py  test_event.py  test_hermes_fallback.py  test_manifest.py  test_memory.py  test_openclaw_dry_run.py  test_router.py  test_signatures.py  test_skill_cli.py  test_slop.py
