[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-hermes"
version = "0.2.0a1"
description = "Marries OpenClaw and Hermes Agent for GitHub workflow orchestration with multi-channel delivery."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Albert Kamalov", email = "bertbertov@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Communications :: Chat",
]
keywords = ["github", "agent", "hermes", "openclaw", "automation", "messaging", "ai"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]
hermes = ["hermes-agent"]

[project.scripts]
claw-hermes = "claw_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/bertbertov/claw-hermes"
Issues = "https://github.com/bertbertov/claw-hermes/issues"
Hermes = "https://github.com/NousResearch/hermes-agent"
OpenClaw = "https://github.com/openclaw/openclaw"

[tool.setuptools.packages.find]
include = ["claw_hermes*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
